--- a/iftop.8
+++ b/iftop.8
@@ -48,6 +48,10 @@ Print a summary of usage.
 .B -d
 Don't do hostname lookups. This setting may be altered at run time.
 
+.B -p
+Run in promiscuous mode, so that traffic which does not pass directly through
+the specified interface is also counted.
+
 .TP
 \fB-i\fP \fIinterface\fP
 Listen to packets on \fIinterface\fP.
