--- a/iftop.8
+++ b/iftop.8
@@ -7,18 +7,11 @@
 .\"
 
 .SH NAME
-iftop - display bandwidth usage on a network interface by host
+iftop - display bandwidth usage on an interface by host
 
 .SH SYNOPSIS
-.B iftop
-.B -h
-| [
-.B -i
-.I interface
-] [
-.B -f
-.I filter code
-]
+\fBiftop\fP \fB-h\fP |
+[\fB-d\fP] [\fB-p\fP] [\fB-i\fP \fIinterface\fP] [\fB-f\fP \fIfilter code\fP]
 
 .SH DESCRIPTION
 \fBiftop\fP listens to network traffic on a named \fIinterface\fP, or \fBeth0\fP
@@ -35,20 +28,33 @@ the bottom of the screen.
 By default, \fBiftop\fP will look up the hostnames associated with addresses it
 finds in packets. This can cause substantial traffic of itself, and may result
 in a confusing display. You may wish to suppress display of DNS traffic by
-using filter code such as `not port domain', or switch it off entirely, by
-using the \fB-d\fP option or the `r' key when the program is running.
+using filter code such as \fBnot port domain\fP, or switch it off entirely,
+by using the \fB-d\fP option or by pressing \fBR\fP when the program is running.
+
+Some other filter ideas:
+.TP
+\fBnot ether host ff:ff:ff:ff:ff:ff\fP
+Ignore ethernet broadcast packets.
+.TP
+\fBport http and not host \fP\fIwebcache.example.com\fP
+Count web traffic only, unless it is being directed through a local web cache.
+.TP
+\fBicmp\fP
+How much bandwith are users wasting trying to figure out why the network is
+slow?
 
 .SH OPTIONS
 
 .TP
-.B -h
+\fB-h\fP
 Print a summary of usage.
 
 .TP
-.B -d
+\fB-d\fP
 Don't do hostname lookups. This setting may be altered at run time.
 
-.B -p
+.TP
+\fB-p\fP
 Run in promiscuous mode, so that traffic which does not pass directly through
 the specified interface is also counted.
 
@@ -59,7 +65,7 @@ Listen to packets on \fIinterface\fP.
 .TP
 \fB-f\fP \fIfilter code\fP
 Use \fIfilter code\fP to select the packets to count. Only IP packets are ever
-counted, so the specified code is evaluated as `(\fIfilter code\fP) and ip'.
+counted, so the specified code is evaluated as \fB(\fP\fIfilter code\fP\fB) and ip\fP.
 
 .SH SEE ALSO
 .BR tcpdump (8),
