--- a/README
+++ b/README
@@ -2,3 +2,8 @@ README for iftop
 $Id$
 
 Read the INSTALL file, manual page and source code for more information.
+
+RedHat 7.2 users:
+There is a bug in the version of ncurses distibuted with RedHat 7.2 that
+will cause iftop to segfault.  The RPM in RedHat's Rawhide distribution
+fixes this.
