--- a/README
+++ b/README
@@ -3,6 +3,8 @@ $Id$
 
 Read the INSTALL file, manual page and source code for more information.
 
+iftop must be run as root.
+
 RedHat 7.2 users:
 There is a bug in the version of ncurses distibuted with RedHat 7.2 that
 will cause iftop to segfault.  The RPM in RedHat's Rawhide distribution
