--- a/iftop.8
+++ b/iftop.8
@@ -124,7 +124,7 @@ bottom line received traffic.
 
 .SH SOURCE / DEST AGGREGATION
 
-By pressing \fBs\fP or \fBd\fP while the \fBiftop\fP is running, all traffic
+By pressing \fBs\fP or \fBd\fP while \fBiftop\fP is running, all traffic
 for each source or destination will be aggregated together.  This is most
 useful when \fBiftop\fP is run in promiscuous mode, or is run on a gateway
 machine.
