--- a/TODO
+++ b/TODO
@@ -1,11 +1,11 @@
 Things to do for iftop
 $Id$
 
-* Interface types other than ethernet? Should at least detect these....
+* Include ports in display
+  - implement service name hash
+  - add key press for src/dest port aggregation
 
 * IP types other than v4?
-
-* Include ports in display.
 
 * Which average to use for the bar graph? Show several and peaks? Colours?
 
