--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,8 @@ $Id$
 Added support for displaying port numbers
 Minor fix to rate display
 Minor fix to netmask handling (specifying /32 was broken)
+Updated RPM spec file 
+    Iain Lea <iain@bricbrac.de>
 
 0.7 02/10/02
 
