Documented pause functionality.

--- a/iftop.8
+++ b/iftop.8
@@ -135,7 +135,11 @@ machine.
 .SH PORT DISPLAY
 
 \fBS\fP or \fBD\fP toggle the display of source and destination ports
-respectively.
+respectively. \fBp\fP will toggle port display on/off.
+
+.SH PAUSE DISPLAY
+
+\fBP\fP will pause the current display.
 
 .SH SEE ALSO
 .BR tcpdump (8),
