--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 Things to do for iftop
 $Id$
 
+* Turn off services resolution.
+
 * IP types other than v4?
 
 * Which average to use for the bar graph? Show several and peaks? Colours?
