--- a/TODO
+++ b/TODO
@@ -1,7 +1,20 @@
 Things to do for iftop
 $Id$
 
+* Bandwidth display in bytes/s
+
+* Search for BSD interface names - need to know what to look for.
+
 * IP types other than v4?
+
+* Redesign totals:
+
+        2sec 10sec 40sec Peak Total
+TX         x     x     x    x     x
+RX         x     x     x    x     x
+Total      x     x     x    x     x
+
+* Find someone gullible to sort out autoconf.
 
 * Which average to use for the bar graph? Show several and peaks? Colours?
 
