Added list of known issues.

--- a/README
+++ b/README
@@ -5,7 +5,20 @@ Read the INSTALL file, manual page and source code for more information.
 
 iftop must be run as root.
 
-RedHat 7.2 users:
+KNOWN ISSUES
+
+RedHat 7.2:
+
 There is a bug in the version of ncurses distibuted with RedHat 7.2 that
 will cause iftop to segfault.  The RPM in RedHat's Rawhide distribution
 fixes this.
+
+Slackware 8.1:
+
+You may need to upgrade your libpcap (by updating the tcpdump package) 
+in order to compile iftop.
+
+FreeBSD 4.7:
+
+DNS resolution does not work due to the lack of a proper gethostbyaddr_r
+implementation.
