--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 Change log for iftop
 $Id$
 
+0.11
+
+Added support for token ring networks
+Token ring network direction determination
+    Martin Garton <Martin.Garton@DCSTRANS.COM>
+
 0.10 29/10/02
 
 User selectable sort criteria
