--- a/CHANGES
+++ b/CHANGES
@@ -7,6 +7,7 @@ Added support for token ring networks
 Token ring network direction determination
     Martin Garton <Martin.Garton@DCSTRANS.COM>
 Added autoconf/automake build system
+Improved network interface auto selection
 
 0.10 29/10/02
 
