--- a/CHANGES
+++ b/CHANGES
@@ -3,8 +3,8 @@ $Id$
 
 0.12
 
-Added 1-line display options.
-Added display scrolling.
+Added 1-line display options ("t")
+Added display scrolling ("j", "k")
 Fixed code for obtaining hardware address (on Linux at least)
 
 0.11 08/01/03
