--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
 Things to do for iftop
 $Id$
 
+BUG: 20s/40s averages are wrong when freeze_order is on.
+BUG: MAC address is broken.
+
 * Attempt to assign direction based on IP of selected interface for DLT_RAW.
 
 * Search for BSD interface names - need to know what to look for.
